src/test/resources/annotator/Proto3IllegalOptionalFieldLabel.proto
syntax = "proto3";

package annotator;

message TestMessage {
    <error descr="Field label \"optional\" is not allowed in proto3">optional</error> int32 field = 1;
}